<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        
        <TextView
            style="@style/faqhead"
            android:text="@string/faq_system_dialogs_title" />
        
        
        <TextView
            style="@style/faqitem"
            android:text="@string/faq_system_dialogs" />
        
        
        <TextView
            style="@style/faqhead"
            android:text="@string/tap_mode" />

        <TextView
            style="@style/faqitem"
            android:text="@string/faq_tap_mode" />

        <TextView
            style="@style/faqhead"
            android:text="@string/faq_security_title" />

        <TextView
            style="@style/faqitem"
            android:text="@string/faq_security" />

        
        <TextView
            style="@style/faqhead"
            android:text="@string/broken_images" 
            />
        
        <TextView
            style="@style/faqitem"
            android:id="@+id/brokenimages" />
        
        
        <TextView
            style="@style/faqhead"
            android:text="@string/faq_shortcut" />
        
        
        <TextView
            style="@style/faqitem"
            android:text="@string/faq_howto_shortcut" />

        <TextView
            style="@style/faqhead"
            android:text="@string/tap_mode" />

        <TextView
            style="@style/faqitem"
            android:text="@string/tap_faq2" />

        <TextView
            style="@style/faqhead"
            android:text="@string/copying_log_entries" />

        <TextView
            style="@style/faqitem"
            android:text="@string/faq_copying" />

        <TextView
            style="@style/faqhead"
            android:text="@string/tap_mode" />

        <TextView
            style="@style/faqitem"
            android:text="@string/tap_faq3" />
    </LinearLayout>

</ScrollView>