<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="netchangereconnect"
        android:summary="@string/netchange_summary"
        android:title="@string/netchange" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="useCM9Fix"
        android:summary="@string/owner_fix_summary"
        android:title="@string/owner_fix" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="showlogwindow"
        android:summary="@string/show_log_summary"
        android:title="@string/show_log_window" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="statusafterconnect"
        android:summary="@string/keppstatus_summary"
        android:title="@string/keepstatus" />

</PreferenceScreen>