<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:blinkt="http://schemas.android.com/apk/res/de.blinkt.openvpn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm" >

        <TextView
            style="@style/item"
            android:text="@string/profilename"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/profilename"
            style="@style/item"
            android:inputType="text"
            />

        
        

        <TextView
            style="@style/item"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/address"
            style="@style/item"
            android:inputType="text"
            android:text="@string/defaultserver" >

            <!-- <requestFocus /> -->
        </EditText>
        
        <TextView
            style="@style/item"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip" >

            <EditText
                android:id="@+id/port"
                style="@style/item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="number"
                android:text="@string/defaultport" />

            <ToggleButton
                android:id="@+id/tcpudp"
                style="@style/accountSetupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textOff="TCP"
                android:textOn="UDP" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/lzo"
            style="@style/item"
            android:text="@string/useLZO" />

        <TextView
            style="@style/item"
            android:text="@string/vpn_type"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/type"
            style="@style/item"
            android:entries="@array/vpn_types"
            android:prompt="@string/vpn_type" />

        <LinearLayout
            android:id="@+id/keystore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <include layout="@layout/keystore_selector" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/certs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <de.blinkt.openvpn.FileSelectLayout
                android:id="@+id/caselect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                blinkt:title="@string/ca_title" />

            <de.blinkt.openvpn.FileSelectLayout
                android:id="@+id/certselect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                blinkt:title="@string/client_certificate_title" />

            <de.blinkt.openvpn.FileSelectLayout
                android:id="@+id/keyselect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                blinkt:title="@string/client_key_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pkcs12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <de.blinkt.openvpn.FileSelectLayout
                android:id="@+id/pkcs12select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                blinkt:title="@string/client_pkcs12_title" />

            <TextView
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:text="@string/pkcs12pwquery"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/pkcs12password"
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:inputType="textPassword" />
        </LinearLayout>

                <LinearLayout
            android:id="@+id/userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >
            
          <TextView
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:text="@string/auth_username"
                android:textAppearance="?android:attr/textAppearanceSmall" />

                       
            <EditText
                android:id="@+id/auth_username"
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:inputType="textNoSuggestions" />            
                        <TextView
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:text="@string/auth_pwquery"
                android:textAppearance="?android:attr/textAppearanceSmall" />

                       
            <EditText
                android:id="@+id/auth_password"
                style="@style/item"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:inputType="textPassword" />
</LinearLayout>
        <LinearLayout
            android:id="@+id/statickeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >
            <TextView android:text="@string/static_keys_info" 
                style="@style/item"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/show_advanced"
            style="@style/item"
            android:text="@string/show_advanced" />

        <LinearLayout
            android:id="@+id/advanced_options"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/useTLSAuth"
                style="@style/item"
                android:text="@string/useTLSAuth" />

            <LinearLayout
                android:id="@+id/tlsauth_options"
	android:orientation="vertical"
	        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="20sp" >

                <de.blinkt.openvpn.FileSelectLayout
                    android:id="@+id/tlsAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    blinkt:title="@string/tlsauth" />

                <TextView
                    style="@style/item"
                    android:text="@string/tls_direction"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                
                <Spinner
                    android:id="@+id/tls_direction"
                    style="@style/item"
                    android:entries="@array/tls_directions"
                    android:prompt="@string/tls_direction" /> 
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/connect"
            style="@style/item"
            android:text="@string/connect" />

        <Button
            android:id="@+id/about"
            style="@style/item"
            android:text="@string/about" />
    </LinearLayout>

</ScrollView>