<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android">

    <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
            android:text="@string/uploaded_data"
            style="@style/logWindowStatusTitle"/>

    <TextView
            style="@style/logWindowStatusText"
            android:id="@+id/speedUp"
            tools:text="4 Mbit/s 6.7 GB"/>

    <TextView
            android:text="@string/downloaded_data"
            style="@style/logWindowStatusTitle"/>

    <TextView
            style="@style/logWindowStatusText"
            android:id="@+id/speedDown"
            tools:text="2 Mbit/s 4.7 GB"/>


    <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
            android:text="@string/vpn_status"
            style="@style/logWindowStatusTitle"/>

    <TextView
            android:id="@+id/speedStatus"
            tools:text="Connected"
            style="@style/logWindowStatusText"/>


</merge>