<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:disableDependentsState="true"
        android:key="usePull"
        android:title="Pull Settings" 
        android:summaryOn="Requests IP addresses, routes and timing options from the server."
    	android:summaryOff="No information is requested from the server. Settings need to be specified below." />

    <PreferenceCategory android:title="IP" >
        <EditTextPreference
            android:dependency="usePull"
            android:dialogMessage="@string/ipv4_dialog_title"
            android:key="ipv4_address"
            android:title="@string/ipv4_address" />
        <EditTextPreference
            android:dependency="usePull"
            android:dialogMessage="@string/ipv6_dialog_tile"
            android:key="ipv6_address"
            android:title="@string/ipv6_address" />
    </PreferenceCategory>
    <PreferenceCategory android:title="DNS" >
        <CheckBoxPreference
            android:key="overrideDNS"
            android:summary="Override DNS Settings by Server"
            android:title="Override DNS Settings" />

        <EditTextPreference
            android:key="searchdomain"
            android:title="searchDomain" />
        <EditTextPreference
            android:key="dns1"
            android:dialogMessage="DNS Server to be used."
            android:title="DNS Server" />
        <EditTextPreference
            android:key="dns2"
            android:dialogMessage="Secondary DNS Server used if the normal DNS Server cannot be reached."
            android:title="Backup DNS Server" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Routing" >
        <CheckBoxPreference
			android:title="Ignore pushed routes"
			android:key="routenopull"
			android:summary="Ignore routed pushed by the server."

            />
        <CheckBoxPreference
            android:disableDependentsState="true"
            android:key="useDefaultRoute"
            android:summary="Redirects all Traffic over the VPN"
            android:title="Use default Route" />

        <EditTextPreference
            android:dependency="useDefaultRoute"
            android:dialogMessage="Enter custom routes. Only enter destination in CIDR format. &quot;10.0.0.0/8 2002::/16&quot; would direct the networks 10.0.0.0/8 and 2002::/16 over the VPN."
            android:key="customRoutes"
            android:title="Custom Routes" />
    </PreferenceCategory>

</PreferenceScreen>