<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- A layout to select a certificate, akin to a file selector on web pages. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:gravity="center_vertical">

    <Button
            android:id="@+id/select_keystore_button"
            style="@style/accountSetupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/select"/>

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/select_keystore_button"
            android:text="@string/client_certificate_title"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/aliasname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:layout_marginLeft="16dip"
            android:layout_toLeftOf="@+id/select_keystore_button"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/no_certificate"/>

    <TextView
            android:id="@+id/alias_certificate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dip"
            android:layout_below="@id/aliasname"
            android:layout_toLeftOf="@+id/select_keystore_button"
            android:ellipsize="end"
            android:singleLine="true"
            />
    <!-- android:textColor="@color/text_secondary_color" -->

</RelativeLayout>